--- a/july16.ipynb
+++ b/july16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "max    1834.000000    15.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +242,35 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chipotle_data.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "761\n",
+      "Chicken Bowl\n"
+     ]
+    }
+   ],
+   "source": [
+    "items_quantity = chipotle_data.groupby('item_name')['quantity'].sum()\n",
+    "most_quantity = items_quantity.max()\n",
+    "print(most_quantity)\n",
+    "most_ordered_item = items_quantity.idxmax()\n",
+    "print(most_ordered_item)"
    ]
   }
  ],
@@ -268,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
