calculate total revenue

--- a/july16.ipynb
+++ b/july16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4  [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
        "max    1834.000000    15.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +271,25 @@
     "print(most_quantity)\n",
     "most_ordered_item = items_quantity.idxmax()\n",
     "print(most_ordered_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39237.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "chipotle_data[\"item_price\"]=chipotle_data[\"item_price\"].str.replace(\"$\",\"\").astype(float)\n",
+    "total_revenue =(chipotle_data[\"item_price\"]*chipotle_data[\"quantity\"]).sum()\n",
+    "print(total_revenue)"
    ]
   }
  ],
