add unique item names

--- a/july16.ipynb
+++ b/july16.ipynb
@@ -329,6 +329,74 @@
     "items_above10=len(chipotle_data[chipotle_data[\"item_price\"]>10])\n",
     "print(items_above10)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chips and Fresh Tomato Salsa\n",
+      "Izze\n",
+      "Nantucket Nectar\n",
+      "Chips and Tomatillo-Green Chili Salsa\n",
+      "Chicken Bowl\n",
+      "Side of Chips\n",
+      "Steak Burrito\n",
+      "Steak Soft Tacos\n",
+      "Chips and Guacamole\n",
+      "Chicken Crispy Tacos\n",
+      "Chicken Soft Tacos\n",
+      "Chicken Burrito\n",
+      "Canned Soda\n",
+      "Barbacoa Burrito\n",
+      "Carnitas Burrito\n",
+      "Carnitas Bowl\n",
+      "Bottled Water\n",
+      "Chips and Tomatillo Green Chili Salsa\n",
+      "Barbacoa Bowl\n",
+      "Chips\n",
+      "Chicken Salad Bowl\n",
+      "Steak Bowl\n",
+      "Barbacoa Soft Tacos\n",
+      "Veggie Burrito\n",
+      "Veggie Bowl\n",
+      "Steak Crispy Tacos\n",
+      "Chips and Tomatillo Red Chili Salsa\n",
+      "Barbacoa Crispy Tacos\n",
+      "Veggie Salad Bowl\n",
+      "Chips and Roasted Chili-Corn Salsa\n",
+      "Chips and Roasted Chili Corn Salsa\n",
+      "Carnitas Soft Tacos\n",
+      "Chicken Salad\n",
+      "Canned Soft Drink\n",
+      "Steak Salad Bowl\n",
+      "6 Pack Soft Drink\n",
+      "Chips and Tomatillo-Red Chili Salsa\n",
+      "Bowl\n",
+      "Burrito\n",
+      "Crispy Tacos\n",
+      "Carnitas Crispy Tacos\n",
+      "Steak Salad\n",
+      "Chips and Mild Fresh Tomato Salsa\n",
+      "Veggie Soft Tacos\n",
+      "Carnitas Salad Bowl\n",
+      "Barbacoa Salad Bowl\n",
+      "Salad\n",
+      "Veggie Crispy Tacos\n",
+      "Veggie Salad\n",
+      "Carnitas Salad\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_names = chipotle_data[\"item_name\"].unique()\n",
+    "for name in unique_names:\n",
+    "    print(name)"
+   ]
   }
  ],
  "metadata": {
